--- a/index.html
+++ b/index.html
@@ -1,184 +1,196 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="description" content="Ефективні рішення для вашого бізнесу!" >
-     <link
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ефективні рішення для вашого бізнесу!" />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="./css/styles.css" >
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo nounderline-link" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="simple-items">
-          <li>
+    <header class="header">
+      <div class="container header-line">
+        <nav class="navigation">
+          <a class="logo nounderline-link" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="menu-nav-list simple-items">
+            <li class="menu-nav-item">
+              <a
+                class="menu-nav-link nounderline-link current-page"
+                href="./index.html"
+                >Студія</a
+              >
+            </li>
+            <li class="menu-nav-item">
+              <a class="menu-nav-link nounderline-link" href="./portfolio.html"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="menu-nav-item"><a class="menu-nav-link nounderline-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts-list simple-items">
+          <li class="header-contacts-item">
             <a
-              class="menu-nav nounderline-link current-page"
-              href="./index.html"
-              >Студія</a
+              class="header-contacts-link nounderline-link"
+              href="mailto:info@devstudio.com"
+              >info&#64;devstudio.com</a
             >
           </li>
-          <li>
-            <a class="menu-nav nounderline-link" href="./portfolio.html"
-              >Портфоліо</a
+          <li class="header-contacts-item">
+            <a class="header-contacts-link nounderline-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
             >
           </li>
-          <li><a class="menu-nav nounderline-link" href="#">Контакти</a></li>
         </ul>
-      </nav>
-      <ul class="simple-items">
-        <li>
-          <a
-            class="header-contacts nounderline-link"
-            href="mailto:info@devstudio.com"
-            >info&#64;devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-contacts nounderline-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
       <section>
-        <h2 class="hidden-title">Особливості</h2>
-        <ul class="simple-items">
-          <li>
-            <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="features-text">
+        <div class="container">
+          <h2 class="hidden-title">Особливості</h2>
+          <ul class="simple-items">
+            <li>
+              <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="features-text">
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
-            <p class="features-text">
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
+              <p class="features-text">
               Так само консультація з широким активомзначною мірою зумолює.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="features-text">
+              </p>
+            </li>
+            <li>
+              <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
-            </p>
-          </li>
-        </ul>
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="simple-items">
-          <li>
-            <img src="./images/image01.jpg" alt="Проект1" width="370"
-            >
-          </li>
-          <li>
-            <img src="./images/image02.jpg" alt="Проект2" width="370"
-            >
-          </li>
-          <li>
-            <img src="./images/image03.jpg" alt="Проект3" width="370"
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="simple-items">
+            <li>
+              <img src="./images/image01.jpg" alt="Проект1" width="370" />
+            </li>
+            <li>
+              <img src="./images/image02.jpg" alt="Проект2" width="370" />
+            </li>
+            <li>
+              <img src="./images/image03.jpg" alt="Проект3" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="simple-items">
-          <li>
-            <img
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="simple-items">
+            <li>
+              <img
               src="./images/image04.jpg"
               alt="Фото Ігор Дем'яненко"
               width="270"
-            >
-            <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-            <p class="team-text" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img
+              />
+              <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+              <p class="team-text" lang="en">Product Designer</p>
+            </li>
+            <li>
+              <img
               src="./images/image05.jpg"
               alt="Фото Ольга Рєпіна"
               width="270"
-            >
-            <h3 class="team-subtitle">Ольга Рєпіна</h3>
-            <p class="team-text" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img
+              />
+              <h3 class="team-subtitle">Ольга Рєпіна</h3>
+              <p class="team-text" lang="en">Frontend Developer</p>
+            </li>
+            <li>
+              <img
               src="./images/image06.jpg"
               alt="Фото Микола Тарасов"
               width="270"
-            >
-            <h3 class="team-subtitle">Микола Тарасов</h3>
-            <p class="team-text" lang="en">Marketing</p>
-          </li>
-          <li>
-            <img
+              />
+              <h3 class="team-subtitle">Микола Тарасов</h3>
+              <p class="team-text" lang="en">Marketing</p>
+            </li>
+            <li>
+              <img
               src="./images/image07.jpg"
               alt="Фото Михайло Єрмаков"
               width="270"
-            >
-            <h3 class="team-subtitle">Михайло Єрмаков</h3>
-            <p class="team-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
+              />
+              <h3 class="team-subtitle">Михайло Єрмаков</h3>
+              <p class="team-text" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo nounderline-link" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
-      <address>
-        <ul class="simple-items">
-          <li>
-            <a
+      <div class="container">
+        <a class="footer-logo nounderline-link" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <address>
+          <ul class="simple-items">
+            <li>
+              <a
               class="nounderline-link footer-contacts"
               href="https://goo.gl/maps/wvJPVJxXwrTkmtdJ7"
               target="_blank"
               rel="noreferrer noopener nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a
+              >
+            </li>
+            <li>
+              <a
               class="nounderline-link footer-contacts"
               href="mailto:info@devstudio.com"
               >info&#64;devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="nounderline-link footer-contacts" href="tel:+380961111111"
+              >
+            </li>
+            <li>
+              <a class="nounderline-link footer-contacts" href="tel:+380961111111"
               >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
