--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
       </div>
     </header>
     <main>
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
-          <h2 class="hidden-title">Особливості</h2>
-          <ul class="simple-items">
-            <li>
+          <h2 class="visually-hidden">Особливості</h2>
+          <ul class="features-list simple-items">
+            <li class="features-item">
               <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
               <p class="features-text">
               Так само консультація з широким активомзначною мірою зумолює.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -100,27 +100,27 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="simple-items">
-            <li>
+          <ul class="work-list simple-items">
+            <li class="work-item">
               <img src="./images/image01.jpg" alt="Проект1" width="370" />
             </li>
-            <li>
+            <li class="work-item">
               <img src="./images/image02.jpg" alt="Проект2" width="370" />
             </li>
-            <li>
+            <li class="work-item">
               <img src="./images/image03.jpg" alt="Проект3" width="370" />
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="simple-items">
-            <li>
+          <ul class="team-list simple-items">
+            <li class="team-item">
               <img
               src="./images/image04.jpg"
               alt="Фото Ігор Дем'яненко"
@@ -129,7 +129,7 @@
               <h3 class="team-subtitle">Ігор Дем'яненко</h3>
               <p class="team-text" lang="en">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
               src="./images/image05.jpg"
               alt="Фото Ольга Рєпіна"
@@ -138,7 +138,7 @@
               <h3 class="team-subtitle">Ольга Рєпіна</h3>
               <p class="team-text" lang="en">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
               src="./images/image06.jpg"
               alt="Фото Микола Тарасов"
@@ -147,7 +147,7 @@
               <h3 class="team-subtitle">Микола Тарасов</h3>
               <p class="team-text" lang="en">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
               src="./images/image07.jpg"
               alt="Фото Михайло Єрмаков"
@@ -166,25 +166,25 @@
           >Web<span class="footer-logo-part">Studio</span></a
         >
         <address>
-          <ul class="simple-items">
-            <li>
+          <ul class="footer-contacts-list simple-items">
+            <li class="footer-contacts-item">
               <a
-              class="nounderline-link footer-contacts"
+              class="nounderline-link footer-contacts-link"
               href="https://goo.gl/maps/wvJPVJxXwrTkmtdJ7"
               target="_blank"
               rel="noreferrer noopener nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-contacts-item">
               <a
-              class="nounderline-link footer-contacts"
+              class="nounderline-link footer-contacts-link"
               href="mailto:info@devstudio.com"
               >info&#64;devstudio.com</a
               >
             </li>
-            <li>
-              <a class="nounderline-link footer-contacts" href="tel:+380961111111"
+            <li class="footer-contacts-item">
+              <a class="nounderline-link footer-contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
               >
             </li>
