--- a/portfolio.html
+++ b/portfolio.html
@@ -57,39 +57,39 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="portfolio-section">
         <div class="container">
-         <h1 class="hidden-title">Наші проекти</h1>
-         <ul class="simple-items">
-          <li>
+         <h1 class="visually-hidden">Наші проекти</h1>
+         <ul class="portfolio-filter-list simple-items">
+          <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">Усі</button>
           </li>
-          <li>
+          <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">
               Веб-сайти
             </button>
           </li>
-          <li>
+          <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">Додатки</button>
           </li>
-          <li>
+          <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">
               Маркетинг
             </button>
           </li>
         </ul>
-        <ul class="simple-items">
-          <li>
+        <ul class="portfolio-list simple-items">
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img src="./images/portfolio01.jpg" alt="Технокряк" width="370" >
               <h2 class="portfolio-subtitle">Технокряк</h2>
               <p class="portfolio-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio02.jpg"
@@ -102,7 +102,7 @@
               <p class="portfolio-text">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio03.jpg"
@@ -115,7 +115,7 @@
               <p class="portfolio-text">Додаток</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio04.jpg"
@@ -128,18 +128,18 @@
               <p class="portfolio-text">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio05.jpg"
                 alt="Проєкт Boxes"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">Проєкт <span>Boxes</span></h2>
+              <h2 class="portfolio-subtitle">Проєкт <span lang="en">Boxes</span></h2>
               <p class="portfolio-text">Додаток</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio06.jpg"
@@ -152,7 +152,7 @@
               <p class="portfolio-text">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio07.jpg"
@@ -165,7 +165,7 @@
               <p class="portfolio-text">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio08.jpg"
@@ -178,7 +178,7 @@
               <p class="portfolio-text">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="nounderline-link" href="#">
               <img
                 src="./images/portfolio09.jpg"
@@ -197,25 +197,25 @@
       <div class="container">
        <a class="footer-logo nounderline-link" href="./index.html">Web<span class="footer-logo-part">Studio</span></p>
        <address>
-        <ul class="simple-items">
-          <li>
+        <ul class="footer-contacts-list simple-items">
+          <li class="footer-contacts-item">
             <a
-              class="nounderline-link footer-contacts"
+              class="nounderline-link footer-contacts-link"
               href="https://goo.gl/maps/wvJPVJxXwrTkmtdJ7"
               target="_blank"
               rel="noreferrer noopener nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="footer-contacts-item">
             <a
-              class="nounderline-link footer-contacts"
+              class="nounderline-link footer-contacts-link"
               href="mailto:info@devstudio.com"
               >info&#64;devstudio.com</a
             >
           </li>
-          <li>
-            <a class="nounderline-link footer-contacts" href="tel:+380961111111"
+          <li class="footer-contacts-item">
+            <a class="nounderline-link footer-contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
