--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
          <h1 class="visually-hidden">Наші проекти</h1>
          <ul class="portfolio-filter-list simple-items">
           <li class="portfolio-filter-item">
-            <button class="portfolio-filter-btn" type="button">Усі</button>
+            <button class="portfolio-filter-btn first-filter-btn" type="button">Усі</button>
           </li>
           <li class="portfolio-filter-item">
             <button class="portfolio-filter-btn" type="button">
