--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section-work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-list simple-items">
