--- a/portfolio.html
+++ b/portfolio.html
@@ -84,109 +84,127 @@
         <ul class="portfolio-list simple-items">
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img src="./images/portfolio01.jpg" alt="Технокряк" width="370" >
-              <h2 class="portfolio-subtitle">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
+              <img class="portfolio-image" src="./images/portfolio01.jpg" alt="Технокряк" width="370" >
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio02.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="portfolio-text">Дизайн</p>
+                </h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio03.jpg"
                 alt="Ресторан Seafood"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">
                 Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="portfolio-text">Додаток</p>
+                </h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio04.jpg"
                 alt="Проєкт Prime"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">
-                Проєкт <span lang="en">Prime</span>
-              </h2>
-              <p class="portfolio-text">Маркетинг</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">
+                  Проєкт <span lang="en">Prime</span>
+                </h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio05.jpg"
                 alt="Проєкт Boxes"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="portfolio-text">Додаток</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio06.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
               >
-              <h2 class="portfolio-subtitle" lang="en">
-                Inspiration has no Borders
-              </h2>
-              <p class="portfolio-text">Веб-сайт</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle" lang="en">
+                  Inspiration has no Borders
+                </h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio07.jpg"
                 alt="Видання Limited Edition"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">
-                Видання <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="portfolio-text">Дизайн</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">
+                  Видання <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio08.jpg"
                 alt="Проєкт LAB"
                 width="370"
               >
-              <h2 class="portfolio-subtitle">
-                Проєкт <span lang="en">LAB</span>
-              </h2>
-              <p class="portfolio-text">Маркетинг</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle">
+                  Проєкт <span lang="en">LAB</span>
+                </h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="nounderline-link" href="#">
-              <img
+              <img class="portfolio-image"
                 src="./images/portfolio09.jpg"
                 alt="Growing Business"
                 width="370"
               >
-              <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
-              <p class="portfolio-text">Додаток</p>
+              <div class="item-description">
+                <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </a>
           </li>
         </ul>
